# advanced-rag

./: README.md  pyproject.toml
data/: documents_cache.pkl
data/chroma_db/49c76e07-f3b7-4f62-83cb-7d58bda8bf8a/: index_metadata.pickle
src/: main.py
src/config/: config.yaml  settings.py
src/core/: pipeline.py
src/repositories/: document_loader.py  ingest.py  vector_store.py
src/services/: embeddings_service.py  evaluation_service.py  llm_service.py  retrieval_service.py  test_retrieval.py
src/utils/: logger.py
tests/: test_embeddings_service.py  test_phase1.py  test_pipeline.py  test_retrieval_service.py  test_vector_store.py
